...
We've caught a fatal error in development mode.

${error.stack}
          `,
          [
            {
              text: 'OK',
              onPress: () => {
                originalErrorHandler(error, isFatal);
              },
            },
          ]
        );
...
